--- a/css/ft.css
+++ b/css/ft.css
@@ -70,7 +70,7 @@ table {
   border-collapse:collapse;
   margin:0 25px 15px 25px;
   text-align:left;
-  width:300px;
+  /*width:300px;*/
 }
 th {
   font-weight:bold;
@@ -214,6 +214,8 @@ dl#searchlist dd a:hover {
 	border:1px solid black;
 	border-collapse:collapse;
 	margin:0 25px;
+	min-width:300px;
+	max-width:600px;
 }
 #filelist tfoot td, #filelist th {
 	border-top:1px solid black;
